--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
 			href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
 			rel="stylesheet"
 		/>
-
+		<link href="http://fonts.cdnfonts.com/css/tahu" rel="stylesheet" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -47,5 +48,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+		<script>
+			$(document).ready(() => {
+				if ($("#sidebar")) {
+					// alert("working");
+					console.log($("div > .show"));
+				}
+			});
+		</script>
 	</body>
 </html>
