fixed footer elements sizing

--- a/public/index.html
+++ b/public/index.html
@@ -50,10 +50,10 @@
     -->
 		<script>
 			$(document).ready(() => {
-				if ($("#sidebar")) {
-					// alert("working");
-					console.log($("div > .show"));
-				}
+				// if ($("#sidebar")) {
+				// 	// alert("working");
+				// 	console.log($("div > .show"));
+				// }
 			});
 		</script>
 	</body>
